Add Identity Configuration And Application User And Their Configurations And Seed For Admin And Roles And Add Migration

--- a/EventManagment.Infrastructure.Persistence/EventManagment.Infrastructure.Persistence.csproj
+++ b/EventManagment.Infrastructure.Persistence/EventManagment.Infrastructure.Persistence.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\EventManagment.Core.Domain\EventManagment.Core.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="_Data\Interceptors\" />
+    <Folder Include="_Data\Migrations\" />
+    <Folder Include="_Data\Seeds\" />
+  </ItemGroup>
+
 </Project>
