--- a/EventManagment.Apis/appsettings.json
+++ b/EventManagment.Apis/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "EventManagmentContext": "Server = .; Database = EventManagmentDb; Trusted_Connection = True;TrustServerCertificate = True"
+    //"Redis": "Localhost"
+
+  },
   "AllowedHosts": "*"
 }
