Implement Send Email Services ,And Add Forget password And Verifiy Code By Email And Reset Password And Get Current User And Change Password Serviceses ,And Impelement Refresh Token Services

--- a/EventManagment.Apis/appsettings.json
+++ b/EventManagment.Apis/appsettings.json
@@ -17,5 +17,14 @@
     "DurationInMinitutes": 10,
     "JWTRefreshTokenExpire": 14
   },
+  "MailSettings": {
+    "Email": "mohammedhamdi726@gmail.com",
+    "DisplayName": "Event Managment",
+    "Password": "rfcfhjtdcfxulqvd",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+
+
+  },
   "AllowedHosts": "*"
 }
